attribution was not showing correctly, also updated it to my github page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,7 +7,7 @@
 // ############
 
 body {
-  position: fixed;
+  // position: fixed;
   background-image: url("./../../images/pattern-bg-mobile.png");
   background-size: cover;
   background-repeat: repeat-y;
@@ -244,4 +244,18 @@ body {
 .app-container .map-container {
   width: 100%;
   height: 100%;
+}
+
+// ###########################
+// *** *** Attribution *** ***
+// ###########################
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  background-color: $color-white;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
